--- a/PeluqueriAPP/PeluqueriAPP/PeluqueriAPP.csproj
+++ b/PeluqueriAPP/PeluqueriAPP/PeluqueriAPP.csproj
@@ -9,6 +9,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Form1.cs" />
+    <Compile Remove="Form1.Designer.cs" />
+    <Compile Remove="Form2.cs" />
+    <Compile Remove="Form2.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="Form1.resx" />
+    <EmbeddedResource Remove="Form2.resx" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="AnyadirGrupo.cs">
       <SubType>Form</SubType>
     </Compile>
