SE VE EL HORARIO QUIERO LLROAR

--- a/PeluqueriAPP/PeluqueriAPP/PeluqueriAPP.csproj
+++ b/PeluqueriAPP/PeluqueriAPP/PeluqueriAPP.csproj
@@ -21,6 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="AnyadirGrupo.cs">
       <SubType>Form</SubType>
     </Compile>
